# csgo-inv-patcher

./: Cargo.toml  LICENSE.md  README.md
src/: main.rs
