[package]
name = "csgo-inv-patcher"
version = "1.0.0"
authors = ["Toa Toastrejn <toa@toaaa.de>"]
edition = "2021"
description = "Patcher tool for CS:GO Legacy to allows you to use your skins. "
repository = "https://github.com/toaaa/csgo-inv-patcher"
license-file = "LICENSE.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.5.0"
rayon = "1.10.0"
dialoguer = "0.11.0"